--- a/gallery.html
+++ b/gallery.html
@@ -7,10 +7,12 @@
 <body>
     <h1>Snapshots</h1>
     <ul>
-        <li><a href="images/fireworks.jpg" title="A fireworks display"> Fireworks</a></li>
-        <li><a href="images/coffee.jpg" title="A cup of black coffee"> Coffee</a></li>
-        <li><a href="images/rose.jpg" title="A red, red rose"> Rose</a></li>
-        <li><a href="images/bigben.jpg" title="The famous clock"> Big Ben</a></li>
+        <li><a href="images/fireworks.jpg" onclick="showPic(this);return false;" title="A fireworks display"> Fireworks</a></li>
+        <li><a href="images/coffee.jpg" onclick="showPic(this);return false;" title="A cup of black coffee"> Coffee</a></li>
+        <li><a href="images/rose.jpg" onclick="showPic(this);return false;" title="A red, red rose"> Rose</a></li>
+        <li><a href="images/bigben.jpg" onclick="showPic(this);return false;" title="The famous clock"> Big Ben</a></li>
     </ul>
+    <img id="placeholder" src="images/placeholder.gif" alt="my image gallery" />
+    <script src="scripts/showPic.js"></script>
 </body>
 </html>
