Image Gallery 3: swapping pictures and text

--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,7 @@
         <li><a href="images/bigben.jpg" onclick="showPic(this);return false;" title="The famous clock"> Big Ben</a></li>
     </ul>
     <img id="placeholder" src="images/placeholder.gif" alt="my image gallery" />
+    <p id="description">Choose an image.</p>
     <script src="scripts/showPic.js"></script>
 </body>
 </html>
