--- a/gallery.html
+++ b/gallery.html
@@ -8,10 +8,26 @@
 <body>
     <h1>Snapshots</h1>
     <ul id="imagegallery">
-        <li><a href="images/fireworks.jpg" title="A fireworks display"> Fireworks</a></li>
-        <li><a href="images/coffee.jpg" title="A cup of black coffee"> Coffee</a></li>
-        <li><a href="images/rose.jpg" title="A red, red rose"> Rose</a></li>
-        <li><a href="images/bigben.jpg" title="The famous clock"> Big Ben</a></li>
+        <li>
+        <a href="images/fireworks.jpg" title="A fireworks display">
+            <img src="images/thumbnail_fireworks.jpg" alt="Fireworks" />
+        </a>
+        </li>
+        <li>
+        <a href="images/coffee.jpg" title="A cup of black coffee" >
+            <img src="images/thumbnail_coffee.jpg" alt="Coffee" />
+        </a>
+        </li>
+        <li>
+        <a href="images/rose.jpg" title="A red, red rose">
+            <img src="images/thumbnail_rose.jpg" alt="Rose" />
+        </a>
+        </li>
+        <li>
+        <a href="images/bigben.jpg" title="The famous clock">
+            <img src="images/thumbnail_bigben.jpg" alt="Big Ben" />
+        </a>
+        </li>
     </ul>
     <img id="placeholder" src="images/placeholder.gif" alt="my image gallery" />
     <p id="description">Choose an image.</p>
