--- a/explanation.html
+++ b/explanation.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" type="text/css" media="screen" href="styles/typography.css" />
   </head>
   <body>
+    <ul id="navigation">
+        <li><a href="index.html" accesskey="1">Home</a></li>
+        <li><a href="search.html" accesskey="4">Search</a></li>
+        <li><a href="contact.html" accesskey="0">Contact</a></li>
+    </ul>
     <h1>What is the Document Object Model?</h1>
     <p>
 The <abbr title="World Wide Web Consortium">W3C</abbr> defines
@@ -27,5 +32,6 @@ HTML</abbr> and <abbr title="eXtensible Markup Language">XML
     <script type="text/javascript" src="scripts/addLoadEvent.js"></script>
     <script type="text/javascript" src="scripts/displayAbbreviations.js"></script>
     <script type="text/javascript" src="scripts/displayCitations.js"></script>
+    <script type="text/javascript" src="scripts/displayAccesskeys.js"></script>
   </body>
 </html>
